# taller-1-tbd

./: README.md  alembic.ini  db.sqlite3  dump_iot_devices.sql  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05-17-22:58_2323bcae1121_templatechange.py  05-17-23:26_690ae1c0cfd2_primerrespaldo.py  05-18-18:47_c87fa7ccd0a2_relaciones_listas.py  05-19-21:19_2112be5fa7b7_mucho_mucho_cambiado.py  05-25-18:11_a0d479e947b1_db_v1.py  05-25-20:35_7f8f268c84ab_db_v2.py  05227de9cad4d0fc_revision.py
app/: __init__.py  crud.py  database.py  dtos.py  main.py  models.py  repositories.py
