[project]
name = "taller-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "colorama>=0.4.6",
    "faker>=37.3.0",
    "litestar[sqlalchemy,standard]>=2.16.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
